# SharkCardGame

./: .gitignore  CMakeLists.txt  README.md  install_libraries.py  library.json  main.cpp  package.json  package.toml
docs/: CHANGELOG.md
src/: Global.h  main.cpp
src/components/: Card.cpp  Card.h  Components.h  Deck.cpp  Deck.h  Player.cpp  Player.h
src/core/: Application.cpp  Application.h
src/scenes/: CustomScene.cpp  CustomScene.h  MenuScene.cpp  MenuScene.h  PlayScene.cpp  PlayScene.h
src/utilities/: Logger.cpp  Logger.h
